--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <style type="text/tailwindcss">
       @layer components {
         .input-field {
-          @apply w-full p-3 bg-slate-50 dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-xl outline-none focus:ring-2 focus:ring-indigo-500 dark:text-white transition-all disabled:opacity-50 disabled:cursor-not-allowed text-sm font-medium placeholder:text-slate-400 dark:placeholder:text-slate-500;
+          @apply w-full p-3.5 bg-slate-50 dark:bg-slate-800/50 border border-slate-200 dark:border-slate-700 rounded-xl outline-none focus:ring-2 focus:ring-indigo-500/50 focus:border-indigo-500 dark:focus:border-indigo-400 dark:text-white transition-all disabled:opacity-50 disabled:cursor-not-allowed text-sm font-medium placeholder:text-slate-400 dark:placeholder:text-slate-600 shadow-sm focus:shadow-md;
+        }
+        .btn-primary {
+          @apply bg-indigo-600 hover:bg-indigo-700 text-white font-bold rounded-xl shadow-lg shadow-indigo-200 dark:shadow-none transition-all active:scale-95;
+        }
+        .card {
+           @apply bg-white dark:bg-slate-900 rounded-2xl shadow-sm border border-slate-200 dark:border-slate-800;
         }
       }
       body {
@@ -66,7 +72,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-200">
+  <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-200 selection:bg-indigo-100 dark:selection:bg-indigo-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
