--- a/index.html
+++ b/index.html
@@ -8,26 +8,71 @@
     <script>
       tailwind.config = {
         darkMode: 'class',
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+            },
+            animation: {
+              'fade-in': 'fadeIn 0.2s ease-out',
+              'slide-up': 'slideUp 0.3s ease-out',
+            },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
+              },
+              slideUp: {
+                '0%': { transform: 'translateY(20px)', opacity: '0' },
+                '100%': { transform: 'translateY(0)', opacity: '1' },
+              }
+            }
+          }
+        }
       }
     </script>
     <style type="text/tailwindcss">
       @layer components {
         .input-field {
-          @apply w-full p-3.5 bg-slate-50 dark:bg-slate-800/50 border border-slate-200 dark:border-slate-700 rounded-xl outline-none focus:ring-2 focus:ring-indigo-500/50 focus:border-indigo-500 dark:focus:border-indigo-400 dark:text-white transition-all disabled:opacity-50 disabled:cursor-not-allowed text-sm font-medium placeholder:text-slate-400 dark:placeholder:text-slate-600 shadow-sm focus:shadow-md;
+          @apply w-full p-3.5 bg-slate-50 dark:bg-slate-800/50 border border-slate-200 dark:border-slate-700 rounded-xl outline-none focus:ring-2 focus:ring-indigo-500/50 focus:border-indigo-500 dark:focus:border-indigo-400 dark:text-white transition-all disabled:opacity-50 disabled:cursor-not-allowed text-sm font-medium placeholder:text-slate-400 dark:placeholder:text-slate-600 shadow-sm focus:shadow-md appearance-none;
         }
         .btn-primary {
-          @apply bg-indigo-600 hover:bg-indigo-700 text-white font-bold rounded-xl shadow-lg shadow-indigo-200 dark:shadow-none transition-all active:scale-95;
+          @apply bg-gradient-to-r from-indigo-600 to-indigo-700 hover:from-indigo-700 hover:to-indigo-800 text-white font-bold rounded-xl shadow-lg shadow-indigo-200 dark:shadow-none transition-all active:scale-95;
         }
         .card {
            @apply bg-white dark:bg-slate-900 rounded-2xl shadow-sm border border-slate-200 dark:border-slate-800;
+        }
+        .glass-panel {
+          @apply bg-white/80 dark:bg-slate-900/80 backdrop-blur-xl border-t border-slate-200/50 dark:border-slate-800/50;
         }
       }
       body {
         font-family: 'Inter', sans-serif;
         padding-bottom: env(safe-area-inset-bottom);
         overscroll-behavior-y: none; /* Prevents pull-to-refresh on Android app */
+        -webkit-tap-highlight-color: transparent;
       }
-      /* Hide scrollbar for clean UI in lists */
+      
+      /* Custom Scrollbar */
+      ::-webkit-scrollbar {
+        width: 6px;
+        height: 6px;
+      }
+      ::-webkit-scrollbar-track {
+        background: transparent;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #cbd5e1;
+        border-radius: 10px;
+      }
+      .dark ::-webkit-scrollbar-thumb {
+        background: #334155;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #94a3b8;
+      }
+
+      /* Hide scrollbar for clean UI in specific lists */
       .no-scrollbar::-webkit-scrollbar {
         display: none;
       }
@@ -43,7 +88,7 @@
         document.documentElement.classList.remove('dark');
       }
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Google API Scripts -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
@@ -72,7 +117,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-200 selection:bg-indigo-100 dark:selection:bg-indigo-900">
+  <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-200 selection:bg-indigo-100 dark:selection:bg-indigo-900/30">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
