--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <style type="text/tailwindcss">
       @layer components {
         .input-field {
-          /* text-base on mobile prevents iOS zoom, sm:text-sm returns to compact on desktop */
-          @apply w-full p-3.5 bg-slate-50 dark:bg-slate-800/50 border border-slate-200 dark:border-slate-700 rounded-xl outline-none focus:ring-2 focus:ring-indigo-500/50 focus:border-indigo-500 dark:focus:border-indigo-400 dark:text-white transition-all disabled:opacity-50 disabled:cursor-not-allowed text-base sm:text-sm font-medium placeholder:text-slate-400 dark:placeholder:text-slate-600 shadow-sm focus:shadow-md appearance-none;
+          /* Increased border contrast (slate-300) for better visibility outdoors */
+          @apply w-full p-3.5 bg-white dark:bg-slate-800/50 border border-slate-300 dark:border-slate-600 rounded-xl outline-none focus:ring-2 focus:ring-indigo-500/50 focus:border-indigo-500 dark:focus:border-indigo-400 dark:text-white transition-all disabled:opacity-50 disabled:cursor-not-allowed text-base sm:text-sm font-semibold placeholder:text-slate-400 dark:placeholder:text-slate-500 shadow-sm focus:shadow-md appearance-none;
         }
         .btn-primary {
           @apply bg-gradient-to-r from-indigo-600 to-indigo-700 hover:from-indigo-700 hover:to-indigo-800 text-white font-bold rounded-xl shadow-lg shadow-indigo-200 dark:shadow-none transition-all active:scale-95;
